Add boilerplate and basic wireframe structure to the html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Pokemon Rock-Paper-Scissors</title>
 </head>
 <body>
+    <header>
+        <h1>Pokemon Rock-Paper-Scissors!</h1>
+    </header>
+    <img src="assets/images/typesimg.webp" alt="A type chart showing effectiveness of certain elements against each other">
+    <div class="choice-area">
+        <button>
+            <h2>Ice</h2>
+        </button>
+        <button>
+            <h2>Ground</h2>
+        </button>
+        <button>
+            <h2>Fire</h2>
+        </button>
+        <button>
+            <h2>Grass</h2>
+        </button>
+        <button>
+            <h2>Rock</h2>
+        </button>
+    </div>
+    <div class="result-area">
+
+    </div>
+    <div id="score-area">
+
+    </div>
+    <footer>
+        <!-- Instructions? -->
+    </footer>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
