Add compare function to compare the users vs computers choice and return a message

--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
     </header>
     <img src="assets/images/typesimg.webp" alt="A type chart showing effectiveness of certain elements against each other">
     <div class="choice-area">
-        <button>
+        <button data-type="ice" class="btn btn--blue">
             <h2>Ice</h2>
         </button>
-        <button>
+        <button data-type="ground" class="btn btn--brown">
             <h2>Ground</h2>
         </button>
-        <button>
+        <button data-type="fire" class="btn btn--red">
             <h2>Fire</h2>
         </button>
-        <button>
+        <button data-type="grass" class="btn btn--green">
             <h2>Grass</h2>
         </button>
-        <button>
+        <button data-type="rock" class="btn btn--orange">
             <h2>Rock</h2>
         </button>
     </div>
     <div class="result-area">
-
+        
     </div>
     <div id="score-area">
 
     </div>
     <footer>
-        <!-- Instructions? -->
+        <p>Rules: Ice freezes Ground and Grass. Ground engulfs Fire and Rock. Fire burns Grass and Ice. Grass grows on Ground and Rock. Rock smashes Ice and Fire.</p>
     </footer>
 
     <script src="assets/js/script.js"></script>
