Add p and span elements to the result area letting user see their choice and computers choice

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
         </button>
     </div>
     <div class="result-area">
-        <p class="result"> <!-- return here --> </p>
+        <p>You chose: <span id="user-choice"></span></p>
+        <p>The computer chose: <span id="comp-choice"></span></p>
+        <p id="result"> <!-- return here --> </p>
     </div>
     <div id="score-area">
         <p class="scores">User score: <span id="user-score">0</span></p>
         <p class="scores">Computer score: <span id="computer-score">0</span></p>
     </div>
     <footer>
-        <p>Rules: Ice freezes Ground and Grass. Ground engulfs Fire and Rock. Fire burns Grass and Ice. Grass grows on Ground and Rock. Rock smashes Ice and Fire.</p>
+        <p>Rules: Ice freezes Ground and Grass. Ground engulfs Fire and Rock. Fire burns Grass and Ice. Grass grows on Ground and Rock. Rock destroys Ice and Fire.</p>
     </footer>
 
     <script src="assets/js/script.js"></script>
