Add some comments so I remember what to start working on tommorow

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="result-area">
         <p>You chose: <span id="user-choice"></span></p>
         <p>The computer chose: <span id="comp-choice"></span></p>
-        <p id="result"> <!-- return here --> </p>
+        <p>Result: <span id="result"></span></p>
     </div>
     <div id="score-area">
         <p class="scores">User score: <span id="user-score">0</span></p>
