Add basic styling, google font, font size, colours and center everything on the page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Pokemon Rock-Paper-Scissors</title>
 </head>
 <body>
     <header>
-        <h1>Pokemon Rock-Paper-Scissors!</h1>
+        <h1>Pokémon Rock-Paper-Scissors!</h1>
     </header>
     <img src="assets/images/typesimg.webp" alt="A type chart showing effectiveness of certain elements against each other">
     <div class="choice-area">
