Add custom made image of diagram and color match the corresponding buttons to it. Add hover pseudo class to buttons.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1>Pokémon Rock-Paper-Scissors!</h1>
         </header>
-        <img src="assets/images/typesimg.webp" alt="A type chart showing effectiveness of certain elements against each other">
+        <img src="assets/images/typeschart.jpg" alt="A type chart showing effectiveness of certain elements against each other">
         <div class="choice-area">
             <button data-type="ice" class="btn btn--blue">
                 <h2>Ice</h2>
