--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <header>
             <h1>Pokémon Rock-Paper-Scissors!</h1>
         </header>
-        <img src="assets/images/typeschart.jpg" alt="A type chart showing effectiveness of certain elements against each other">
+        <div class="type-chart-container">
+            <img src="assets/images/typeschart.jpg" alt="A type chart showing effectiveness of certain elements against each other">
+        </div>
         <div class="choice-area">
             <button data-type="ice" class="btn btn--blue">
                 <h2>Ice</h2>
