Add more content to read me file and make heading an anchor to refresh page when clicked

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="content">
         <header>
-            <h1>Pokémon Rock-Paper-Scissors!</h1>
+            <a href="index.html">
+                <h1 class="logo">Pokémon Rock-Paper-Scissors!</h1>
+            </a>
         </header>
         <div class="type-chart-container">
             <img src="assets/images/typeschart.jpg" alt="A type chart showing effectiveness of certain elements against each other">
