Remove h2 elements from the buttons after getting errors from validator. Restyle buttons.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </div>
         <div class="choice-area">
             <button data-type="ice" class="btn btn--blue">
-                <h2>Ice</h2>
+                Ice
             </button>
             <button data-type="ground" class="btn btn--brown">
-                <h2>Ground</h2>
+                Ground
             </button>
             <button data-type="fire" class="btn btn--red">
-                <h2>Fire</h2>
+                Fire
             </button>
             <button data-type="grass" class="btn btn--green">
-                <h2>Grass</h2>
+                Grass
             </button>
             <button data-type="rock" class="btn btn--orange">
-                <h2>Rock</h2>
+                Rock
             </button>
         </div>
         <div class="result-area">
