--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
                 <h1 class="logo">Pokémon Rock-Paper-Scissors!</h1>
             </a>
         </header>
-        <div class="type-chart-container">
-            <img src="assets/images/typeschart.jpg" alt="A type chart showing effectiveness of certain elements against each other">
+        <div class="instructions">
+            <p>Rules:</p>
+            <p>Ice freezes Ground and Grass.</p>
+            <p>Ground engulfs Fire and Rock.</p>
+            <p>Fire burns Grass and Ice.</p>
+            <p>Grass grows on Ground and Rock.</p>
+            <p>Rock destroys Ice and Fire.</p>
         </div>
         <div class="choice-area">
             <button data-type="ice" class="btn btn--blue">
@@ -40,16 +45,10 @@
             <p>You chose: <span id="user-choice"></span></p>
             <p>The computer chose: <span id="comp-choice"></span></p>
             <p>Result: <span id="result"></span></p>
-        </div>
-        <div id="score-area">
             <p class="scores">User score: <span id="user-score">0</span></p>
             <p class="scores">Computer score: <span id="computer-score">0</span></p>
         </div>
     </div>
-    <footer class="footer">
-        <p>Rules: Ice freezes Ground and Grass. Ground engulfs Fire and Rock. Fire burns Grass and Ice. Grass grows on Ground and Rock. Rock destroys Ice and Fire.</p>
-    </footer>
-
     <script src="assets/js/script.js"></script>
 </body>
 </html>
