Add colour to result-area and make responsive

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
                 Rock
             </button>
         </div>
-        <div class="result-area">
-            <p>You chose: <span id="user-choice"></span></p>
-            <p>The computer chose: <span id="comp-choice"></span></p>
-            <p>Result: <span id="result"></span></p>
-            <p class="scores">User score: <span id="user-score">0</span></p>
-            <p class="scores">Computer score: <span id="computer-score">0</span></p>
-        </div>
+        <div class="result-container">
+            <div class="result-area">
+                <p>You chose: <span id="user-choice"></span></p>
+                <p>The computer chose: <span id="comp-choice"></span></p>
+                <p>Result: <span id="result"></span></p>
+                <p class="scores">User score: <span id="user-score">0</span></p>
+                <p class="scores">Computer score: <span id="computer-score">0</span></p>
+            </div>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
