Update colours to hex colours for result-area and update screenshots in readme.md

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <p class="scores">User score: <span id="user-score">0</span></p>
                 <p class="scores">Computer score: <span id="computer-score">0</span></p>
             </div>
+        </div>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
