Changed page title to match name in readme and links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Pokemon Rock-Paper-Scissors</title>
+    <title>Elemental Match-Up</title>
 </head>
 <body>
     <!-- Overall div for styling the header to stay at the top of the page -->
@@ -21,7 +21,7 @@
         <!-- Anchor element linking this index.html file, user can click logo to refresh page -->
         <header>
             <a href="index.html">
-                <h1 class="logo">Pokémon Rock-Paper-Scissors!</h1>
+                <h1 class="logo">Elemental Match-Up!</h1>
             </a>
         </header>
 
